--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,8 +32,7 @@ steps:
         #Once the folder structure is available in the destination, we then copy the file to that location using copy-item command
         #Force parameter is used copy-item to overwrite any existing files
 
-    script: |
-        $sourcepath=$(Build.SourcesDirectory)/reports;
+    script: $sourcepath=$(Build.SourcesDirectory)/reports;
         $files=$(git diff $sourcepath HEAD HEAD~ --name-only);
         $temp=$files-split ' '; 
         $count=$temp.Length;
