--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,9 +10,9 @@ trigger:
     exclude:
     - releases/old*
     - feature/*-working
-#   paths:
-#     include:
-#     - docs/*.md
+  paths:
+    include:
+    - reports/*.pbix
     
 pool:
   vmImage: 'windows-latest'
@@ -36,7 +36,7 @@ steps:
 
     script: |
         $sourcepath="$(Build.SourcesDirectory)/reports"; 
-        $files=$(git diff $sourcepath HEAD HEAD~ --name-only);
+        $files=$(git diff HEAD HEAD~ --name-only);
         $temp=$files-split ' '; 
         $count=$temp.Length;
         echo "Total changed $count files";
