--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ steps:
 
     script: |
         $sourcepath="$(Build.SourcesDirectory)/reports"; 
-        $files=$(git diff HEAD HEAD~ $sourcepath/* --name-only);
+        $files=$(git diff HEAD HEAD~ --name-only $sourcepath/*);
         $temp=$files-split ' '; 
         $count=$temp.Length;
         echo "Total changed $count files";
