--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
         #Force parameter is used copy-item to overwrite any existing files
 
     script: |
-        $global:ReportName =Report;
+        $global:ReportName ="Report";
         $sourcepath="$(Build.SourcesDirectory)/reports"; 
         $files=$(git diff HEAD HEAD~ --name-only $sourcepath/*) -join ',';
         $temp=$files-split ','; 
