Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,7 +59,7 @@ steps:
         }
 
         Get-ChildItem -Path $(Build.ArtifactStagingDirectory) -Recurse -Force
-        Write-Host "ReportName=$(ReportName)"
+        echo "ReportName=$(ReportName)"
         
         
 - task: ArchiveFiles@2
