Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,6 +57,7 @@ steps:
 
         Get-ChildItem -Path $(Build.ArtifactStagingDirectory) -Recurse -Force;
         echo "files: $files";
+        echo "sub-folder: $temp[0].Split('/')[-2]";
         
         
 - task: ArchiveFiles@2
