--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,8 +57,8 @@ steps:
 
         Get-ChildItem -Path $(Build.ArtifactStagingDirectory) -Recurse -Force;
         echo "files: $files";
-        $name_first=$temp[0];
-        echo "sub-folder: $name_first.Split('/')[-2]";
+        $name_first=$temp[0].Split('/')[-2];
+        echo "sub-folder: $name_first";
         
         
 - task: ArchiveFiles@2
